--- a/fronted-vue/package.json
+++ b/fronted-vue/package.json
@@ -8,12 +8,19 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@primevue/themes": "^4.0.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "datatables.net": "^2.0.8",
+    "datatables.net-dt": "^2.0.8",
+    "jquery": "^3.7.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.0",
     "sweetalert2": "^11.12.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
+    "vue3-table": "^1.0.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
