--- a/fronted-vue/package.json
+++ b/fronted-vue/package.json
@@ -15,11 +15,14 @@
     "datatables.net": "^2.0.8",
     "datatables.net-dt": "^2.0.8",
     "jquery": "^3.7.1",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primevue": "^4.0.0",
+    "primevue": "^3.53.0",
     "sweetalert2": "^11.12.2",
     "vue": "^3.2.13",
+    "vue-datepicker": "^1.3.0",
     "vue-router": "^4.0.13",
+    "vue3-datepicker": "^0.4.0",
     "vue3-table": "^1.0.0",
     "vuex": "^4.0.0"
   },
