--- a/fronted-vue/package.json
+++ b/fronted-vue/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@primevue/themes": "^4.0.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
