--- a/fronted-vue/package.json
+++ b/fronted-vue/package.json
@@ -7,14 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@primevue/themes": "^4.0.0",
     "@syncfusion/ej2-vue-calendars": "^26.1.41",
     "@syncfusion/ej2-vue-charts": "^26.1.42",
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
-    "core-js": "^3.8.3",
+    "bootstrap-vue": "^2.23.1",
+    "core-js": "^3.37.1",
     "datatables.net": "^2.0.8",
     "datatables.net-dt": "^2.0.8",
     "echarts": "^5.5.1",
@@ -22,14 +24,14 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.53.0",
-    "sweetalert2": "^11.12.2",
-    "vue": "^3.2.13",
+    "sweetalert2": "^11.12.3",
+    "vue": "^3.4.33",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-datepicker": "^1.3.0",
-    "vue-router": "^4.0.13",
+    "vue-router": "^4.4.0",
     "vue3-datepicker": "^0.4.0",
     "vue3-table": "^1.0.0",
-    "vuex": "^4.0.0"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
