--- a/fronted-vue/package.json
+++ b/fronted-vue/package.json
@@ -16,6 +16,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "chart.js": "^4.4.3",
     "core-js": "^3.37.1",
     "datatables.net": "^2.0.8",
     "datatables.net-dt": "^2.0.8",
@@ -26,6 +27,7 @@
     "primevue": "^3.53.0",
     "sweetalert2": "^11.12.3",
     "vue": "^3.4.33",
+    "vue-chartjs": "^5.3.1",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-datepicker": "^1.3.0",
     "vue-router": "^4.4.0",
