--- a/backend-express/package.json
+++ b/backend-express/package.json
@@ -20,11 +20,12 @@
     "connect-flash": "^0.1.1",
     "connect-mysql": "^4.0.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-fileupload": "^1.5.0",
+    "express-fileupload": "^1.5.1",
     "express-handlebars": "^7.1.2",
     "express-mysql-session": "^2.1.8",
     "express-rate-limit": "^7.3.1",
